--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="js10.js"></script>
-    <script src="js9.js"></script>
+<!--    <script src="js10.js"></script>-->
+<!--    <script src="js9.js"></script>-->
+    <script src="js12.js"></script>
 <!--    <script type="module" src="js11.js"></script>-->
     <title>Document</title>
 </head>
