--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <!--    <script src="js10.js"></script>-->
 <!--    <script src="js9.js"></script>-->
-    <script src="js12.js"></script>
+<!--    <script src="js12.js"></script>-->
+    <script src="js13.js"></script>
 <!--    <script type="module" src="js11.js"></script>-->
     <title>Document</title>
 </head>
